# domino-napi

./: .gitattributes  .gitignore  Building.md  LICENSE  NOTICE.txt  README.md
dwo-domino-napi-native/: .gitignore  CMakeLists.txt  build-linux32.sh  build-linux64.sh  build-macosx64.sh  build-mingw-win64.bat  build-win32.bat  build-win64.bat  pom.xml
dwo-domino-napi-native/build-macosx32/: Makefile
dwo-domino-napi-native/dependencies/: .gitignore
dwo-domino-napi-native/dependencies/inc/: .gitignore
dwo-domino-napi-native/dependencies/inc/notes/: README.txt
dwo-domino-napi-native/dependencies/lib/notes/mswin32/: Adding undocumented functions.txt  exports.txt  nNOTES - Copy.def  nNOTES.def  notes.lib
dwo-domino-napi-native/dependencies/lib/notes/mswin32-official/: editfax.lib
dwo-domino-napi-native/dependencies/lib/notes/mswin64/: Exporting Windows nnotes.txt
dwo-domino-napi-native/dependencies/lib/notes/mswin64-official/: nNOTES.def  notes.lib
dwo-domino-napi-native/lib/: libdomino-macosx-x64.dylib
dwo-domino-napi-native/src/main/c++/: C.cpp  CRefs.cpp  JNIHelper.cpp  MainDLL.cpp  NotesHelpers.cpp  PROC.cpp  STRUCT.cpp
dwo-domino-napi-native/src/main/c++/jni/: acl.cpp  foldman.cpp  global.cpp  htmlapi.cpp  idtable.cpp  idvault.cpp  kfm.cpp  log.cpp  mime.cpp  mimedir.cpp  misc.cpp  nif.cpp  nls.cpp  ns.cpp  nsfdb.cpp  nsfmime.cpp  nsfnote.cpp  nsfobjec.cpp  nsfsearc.cpp  ods.cpp  osenv.cpp  osfile.cpp  osmem.cpp  osmisc.cpp  ostime.cpp
dwo-domino-napi-native/src/main/include/: allinc.h  jnihelper.h  notesext.h  noteshelper.h  notesproc.h
dwo-domino-napi-native/tools/reimp/src/: nNOTES.def  notes.lib
eclipse/: pom.xml
eclipse/bundles/com.darwino.domino.napi/: pom.xml
eclipse/bundles/com.darwino.domino.napi.xsp/: build.properties  plugin.xml  pom.xml
eclipse/bundles/com.darwino.domino.napi.xsp/src/main/java/com/darwino/domino/napi/xsp/: NapiActivator.java  NapiLibrary.java
eclipse/bundles/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/: DominoAPI.java  DominoAPIImpl.java  DominoException.java  DominoFormulaException.java  JNIUtils.java
eclipse/bundles/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/c/: BaseByteRef.java  BaseIntRef.java  BaseLongRef.java  BaseShortRef.java  ByteRef.java  ByteRefPtr.java  C.java  IntRef.java  IntRefPtr.java  LMBCSString.java  LongRef.java  LongRefPtr.java  ShortRef.java  ShortRefPtr.java
eclipse/bundles/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/enums/: ACLEntryFlag.java  ACLFlag.java  ACLLevel.java  CDEXTFIELD_HELPER.java  CDGRAPHIC_FLAG.java  CDGRAPHIC_VERSION.java  CDKEYWORD_Flag.java  CD_ELEMENT.java  CmdArgID.java  CmdArgValueType.java  CmdId.java  DBClass.java  DBOption.java  DominoEnumUtil.java  EC_FLAG.java  EC_STYLE.java  EMBEDDEDCTL_TYPE.java  EMEventID.java  FEXT1.java  FEXT2.java  FIELD_LIMIT_TYPE.java  FieldFlag.java  FieldType.java  LDELIM.java  (+31 more)
eclipse/com.darwino.domino.napi/: build.properties  pom.xml
eclipse/com.darwino.domino.napi.feature/: .gitignore  feature.xml  pom.xml
eclipse/com.darwino.domino.napi.feature/community/: feature.properties
eclipse/com.darwino.domino.napi.test/: .gitignore  build.properties  pom.xml
eclipse/com.darwino.domino.napi.test/src/main/java/com/darwino/domino/napi/test/: AllTests.java
eclipse/com.darwino.domino.napi.test/src/main/resources/: darwinosync-cg.nsf  designtestbed.nsf  twokey.nsf  v2tester.nsf
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/: DominoAPIImpl.java  DominoFormulaException.java  JNIUtils.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/c/: BaseByteRef.java  BaseIntRef.java  BaseLongRef.java  ByteRef.java  ByteRefPtr.java  IntRef.java  IntRefPtr.java  LongRefPtr.java  ShortRef.java  ShortRefPtr.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/enums/: ACLFlag.java  CDEXTFIELD_HELPER.java  CDGRAPHIC_FLAG.java  CDGRAPHIC_VERSION.java  CmdArgID.java  CmdArgValueType.java  CmdId.java  DBClass.java  DBOption.java  DominoEnumUtil.java  EC_FLAG.java  EMEventID.java  FEXT2.java  FIELD_LIMIT_TYPE.java  FieldFlag.java  FieldType.java  FileObjectCompress.java  FileObjectFlag.java  HOTSPOTREC_RUNFLAG.java  HOTSPOTREC_TYPE.java  HTMLAPI_REF_TYPE.java  LDELIM.java  MIMEPartFlag.java  NamesListAuth.java  ODSType.java  SIG_CD.java  TransactionFlag.java  UAT.java  VCF1.java  VCF3.java  VIEW_COL.java  VIEW_STYLE.java  VIEW_TABLE_Flag2.java  ValueType.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/proc/: ActionRoutinePtr.java  BaseProc.java  IDENUMERATEPROC.java  NSFITEMSCANPROC.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/struct/: COLLATION.java  COLLECTIONDATA.java  COLLECTIONSTATS.java  DBREPLICAINFO.java  FILEOBJECT.java  GLOBALINSTANCEID.java  HTMLAPIReference.java  HTMLAPI_URLArg.java  HTMLAPI_URLTargetComponent.java  ITEM.java  MIME_PART.java  NAMES_LIST.java  NFMT.java  OID.java  SEARCH_MATCH.java  TIMEDATE.java  TIMEDATE_PAIR.java  TimeStruct.java  UNIVERSALNOTEID.java  VIEW_COLUMN_FORMAT.java  VIEW_FORMAT_HEADER.java  VIEW_TABLE_FORMAT.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/util/: CDUtil.java  DominoNativeUtils.java  DominoUtils.java
eclipse/com.darwino.domino.napi/src/main/java/com/darwino/domino/napi/wrap/: HTMLExporter.java  NSFACL.java  NSFDateRange.java  NSFFolder.java  NSFFormula.java  NSFHandle.java  NSFNote.java  NSFNoteIDCollection.java  NSFNoteInfo.java  NSFViewEntryCollection.java
eclipse/features/com.darwino.domino.napi.feature/: feature.xml  pom.xml
eclipse/features/com.darwino.domino.napi.feature/community/: feature.properties
eclipse/features/com.darwino.domino.napi.feature/enterprise/: feature.properties
eclipse/releng/com.darwino.domino.napi.updatesite/: pom.xml  site.xml
eclipse/releng/domino-napi-dist/: pom.xml
eclipse/releng/domino-napi-dist/src/main/assembly/: assembly.xml
eclipse/tests/com.darwino.domino.napi.test/: pom.xml
legal/: REDIST-IBM C API Toolkit.txt
osgi-deps/Misc/: pom.xml
(+188 files in other folders)
